--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8020
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/template?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+#=========redis????=========
+spring.redis.database=1
+spring.redis.host=localhost
+spring.redis.port=8021
+# ?????? ?? ms????
+spring.redis.timeout=3000
 
